# cookiecutter-mdakit

./: .buildinfo  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  cookiecutter.json  customising.html  files.html  genindex.html  getting_started.html  index.html  mdakitter  objects.inv  options.html  readthedocs.yaml  search.html  searchindex.js  usage.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: gh-ci.yaml
TestMDAKit_with_anaconda-deps_and_ReadTheDocs/mdakit-cookie/: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
TestMDAKit_with_anaconda-deps_and_no-ReadTheDocs/mdakit-cookie/: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
TestMDAKit_with_condaforge-deps_and_ReadTheDocs/mdakit-cookie/: .lgtm.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
TestMDAKit_with_condaforge-deps_and_no-ReadTheDocs/mdakit-cookie/: AUTHORS.md  README.md  pyproject.toml  setup.py
TestMDAKit_with_host_MDAnalysis_anaconda-deps_and_ReadTheDocs/mdakit-Cookie/: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
TestMDAKit_with_host_MDAnalysis_anaconda-deps_and_ReadTheDocs/mdakit-cookie/: AUTHORS.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
TestMDAKit_with_host_MDAnalysis_anaconda-deps_and_no-ReadTheDocs/mdakit-Cookie/: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
TestMDAKit_with_host_MDAnalysis_anaconda-deps_and_no-ReadTheDocs/mdakit-cookie/: AUTHORS.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
TestMDAKit_with_host_MDAnalysis_condaforge-deps_and_ReadTheDocs/mdakit-Cookie/: .gitattributes  .pylintrc  AUTHORS.md  CONTRIBUTING.md  README.md  pyproject.toml
TestMDAKit_with_host_MDAnalysis_condaforge-deps_and_ReadTheDocs/mdakit-cookie/: .codecov.yml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
TestMDAKit_with_host_MDAnalysis_condaforge-deps_and_no-ReadTheDocs/mdakit-Cookie/: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
TestMDAKit_with_host_MDAnalysis_condaforge-deps_and_no-ReadTheDocs/mdakit-cookie/: AUTHORS.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  setup.py
TestMDAKit_with_host_MDAnalysis_pip-deps_and_ReadTheDocs/mdakit-Cookie/: AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
TestMDAKit_with_host_other_pip-deps_and_no-ReadTheDocs/mdakit-Cookie/: AUTHORS.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
TestMDAKit_with_host_other_pip-deps_and_no-ReadTheDocs/mdakit-Cookie/.github/ISSUE_TEMPLATE/: bug_report.md
TestMDAKit_with_host_other_pip-deps_and_no-ReadTheDocs/mdakit-Cookie/.github/workflows/: gh-ci.yaml
TestMDAKit_with_host_other_pip-deps_and_no-ReadTheDocs/mdakit-Cookie/cookieKit/: __init__.py
TestMDAKit_with_host_other_pip-deps_and_no-ReadTheDocs/mdakit-Cookie/cookieKit/analysis/: myanalysisclass.py
TestMDAKit_with_host_other_pip-deps_and_no-ReadTheDocs/mdakit-Cookie/cookieKit/data/: files.py
TestMDAKit_with_host_other_pip-deps_and_no-ReadTheDocs/mdakit-Cookie/docs/source/: conf.py  index.rst
TestMDAKit_with_pip-deps_and_no-ReadTheDocs/mdakit-cookie/: AUTHORS.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
TestMDAKit_with_pip-deps_and_no-ReadTheDocs/mdakit-cookie/.github/workflows/: gh-ci.yaml
TestMDAKit_with_pip-deps_and_no-ReadTheDocs/mdakit-cookie/docs/: index.rst  requirements.yaml
TestMDAKit_with_pip-deps_and_no-ReadTheDocs/mdakit-cookie/docs/source/: conf.py  getting_started.rst
TestMDAKit_with_pip-deps_and_no-ReadTheDocs/mdakit-cookie/mdakit_cookie/: __init__.py  mdakit_cookie.py
TestMDAKit_with_pip-deps_and_no-ReadTheDocs/mdakit-cookie/mdakit_cookie/analysis/: myanalysisclass.py
_sources/: files.rst.txt  getting_started.rst.txt  index.rst.txt  usage.rst.txt
_static/: documentation_options.js
cookiecutter/: hooks.html  json_options.html
customising/: code.html  documentation.html  github.html  packaging.html  tests.html
docs/: .gitignore  Makefile  conf.py  index.rst  make.bat  requirements.yaml  usage.rst
docs/source/: conf.py  (+6 more)
examples/: README.md
hooks/: post_gen_project.py  pre_gen_project.py
tests/: .gitignore  conftest.py  setup_cookiecutter.py  test_generate_cookiecutter_cli.py  test_licenses.py  test_options.py  test_output.py  utils.py
{{cookiecutter.repo_name}}/: .codecov.yml  .pylintrc  AUTHORS.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  pyproject.toml  readthedocs.yaml  setup.cfg  setup.py
{{cookiecutter.repo_name}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.repo_name}}/.github/actions/get-stable-python-version/: action.yaml  get_python_version.py
{{cookiecutter.repo_name}}/.github/actions/install-mdanalysis/: action.yaml
{{cookiecutter.repo_name}}/.github/workflows/: gh-ci.yaml  {{cookiecutter._ci_name}}-dev.yaml  {{cookiecutter._ci_name}}.yaml
{{cookiecutter.repo_name}}/devtools/conda-envs/: test_env.yaml
{{cookiecutter.repo_name}}/docs/: Makefile  conf.py  requirements.yaml
{{cookiecutter.repo_name}}/docs/source/: api.rst  conf.py
{{cookiecutter.repo_name}}/licenses/: BSD-3.txt
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py  {{cookiecutter.package_name}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/analysis/: {{cookiecutter.template_analysis_class.lower()}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/data/: files.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/tests/: conftest.py  test_{{cookiecutter.package_name}}.py  utils.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/tests/analysis/: test_{{cookiecutter.template_analysis_class.lower()}}.py  test_{{cookiecutter.template_analysis_class}}.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/: __init__.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/data/: files.py
{{cookiecutter.repo_name}}/{{cookiecutter.repo_name}}/tests/: conftest.py  test_{{cookiecutter.repo_name}}.py
(+335 files in other folders)
