[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.repo_name}}"
description = "{{cookiecutter.description}}"
license = {{ "{" }}file = "LICENSE" {{ "}" }}
authors = [
    {{ "{" }}name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"{{ "}" }},
]
maintainers = [
    {{ "{" }}name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"{{ "}" }},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/{{cookiecutter.github_url}}"
# documentation = "https://{{cookiecutter.repo_name}}.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "{{cookiecutter.repo_name}}/tests",
]
