[build-system]
requires = [
  "setuptools >=61.2",
  "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.repo_name}}"
description = "{{cookiecutter.description}}"
license = {{ "{" }}file = "LICENSE" {{ "}" }}
authors = [
    {{ "{" }}name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"{{ "}" }},
]
maintainers = [
    {{ "{" }}name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"{{ "}" }},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/{{cookiecutter.github_url}}"
# documentation = "https://{{cookiecutter.repo_name}}.readthedocs.io"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "{{cookiecutter.repo_name}}/tests",
]

[tool.black]
line-length = 80

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.vcs]
method = "git"
# the below line expects tags to look like '1.0.2'.
# if prefixing with a v, e.g. 'v1.0.2', change it to ["v*"]
match = ["*"]

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
