[build-system]
requires = [
  "setuptools >=61.2",
  "versioningit",
]
build-backend = "setuptools.build_meta"

[project]
name = "mdakit-Cookie"
description = "Test MDAKit Project with dependencies using pip and no ReadTheDocs"
license = {file = "LICENSE" }
authors = [
    {name = "Test User name", email = "test_email@test.com"},
]
maintainers = [
    {name = "Test User name", email = "test_email@test.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/other/mdakit-Cookie"
# documentation = "https://mdakit-Cookie.readthedocs.io"

[tool.setuptools.packages.find]
include = ["cookieKit"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "cookieKit/tests",
]

[tool.black]
line-length = 80

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.vcs]
method = "git"
# the below line expects tags to look like '1.0.2'.
# if prefixing with a v, e.g. 'v1.0.2', change it to ["v*"]
match = ["*"]

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.coverage.run]
omit = [
    # Omit the tests
    "*/tests/*",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 80

[tool.yapf]
COLUMN_LIMIT = 80
INDENT_WIDTH = 4
USE_TABS = false
