[build-system]
requires = [
  "setuptools >= 40.9.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mdakit-cookie"
description = "Test MDAKit Project with dependencies using pip and no ReadTheDocs"
license = {file = "LICENSE" }
authors = [
    {name = "Test User name", email = "test_email@test.com"},
]
maintainers = [
    {name = "Test User name", email = "test_email@test.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "MDAnalysis>=2.0.0",
]
keywords = [
    "molecular simulations",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "pytest-xdist>=2.5",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

# [project.urls]
# source = "https://github.com/MDAnalysis/mdakit-cookie"
# documentation = "https://mdakit-cookie.readthedocs.io"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "mdakit-cookie/tests",
]
